# qbe

./: CHANGES_README.txt
amd64/: emit.c
ex1/: CHANGES_README.txt  CMakeLists.txt
ex1/amd64/: emit.c
ex1/minic/test/: bo.c
ex2/: CHANGES_README.txt  all.h  main.c  parse.c
ex2/amd64/: emit.c
ex2/minic/: CMakeLists.txt
ex2/minic/test/: bo.c  bo2.c
minic/test/: bo.c
