cmake_minimum_required(VERSION 3.7)
project(qbe)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        amd64/all.h
        amd64/emit.c
        amd64/isel.c
        amd64/sysv.c
        amd64/targ.c
        arm64/abi.c
        arm64/all.h
        arm64/emit.c
        arm64/isel.c
        arm64/targ.c
        minic/test/collatz.c
        minic/test/euler9.c
        minic/test/knight.c
        minic/test/mandel.c
        minic/test/prime.c
        minic/test/queen.c
        minic/Makefile
        minic/minic.y
        minic/y.tab.c
        minic/yacc.c
        test/_alt.ssa
        test/_bf99.ssa
        test/_bfmandel.ssa
        test/_dragon.ssa
        test/_fix1.ssa
        test/_fix2.ssa
        test/_fix3.ssa
        test/_fix4.ssa
        test/_live.ssa
        test/_rpo.ssa
        test/_spill1.ssa
        test/_spill2.ssa
        test/_spill3.ssa
        test/abi1.ssa
        test/abi2.ssa
        test/abi3.ssa
        test/abi4.ssa
        test/abi5.ssa
        test/abi6.ssa
        test/align.ssa
        test/collatz.ssa
        test/cprime.ssa
        test/cup.ssa
        test/dark.ssa
        test/double.ssa
        test/echo.ssa
        test/eucl.ssa
        test/euclc.ssa
        test/fixarg.ssa
        test/fpcnv.ssa
        test/ldbits.ssa
        test/ldhoist.ssa
        test/loop.ssa
        test/mandel.ssa
        test/max.ssa
        test/philv.ssa
        test/prime.ssa
        test/puts10.ssa
        test/queen.ssa
        test/strcmp.ssa
        test/strspn.ssa
        test/sum.ssa
        test/vararg1.ssa
        test/vararg2.ssa
        tools/abifuzz.sh
        tools/callgen.ml
        tools/cra.sh
        tools/lexh.c
        tools/pmov.c
        tools/test.sh
        tools/vatest.py
        alias.c
        all.h
        cfg.c
        config.h
        copy.c
        fold.c
        gas.c
        live.c
        load.c
        main.c
        mem.c
        ops.h
        parse.c
        rega.c
        spill.c
        ssa.c
        util.c)

add_executable(qbe ${SOURCE_FILES})